erDiagram
    GAMES ||--o{ GAME_SESSIONS : "has"
    GAMES ||--o{ USER_ACHIEVEMENTS : "awards"
    GAMES ||--o{ LEADERBOARD : "ranks"
    USERS ||--o{ GAME_SESSIONS : "plays"
    USERS ||--o{ USER_ACHIEVEMENTS : "earns"
    USERS ||--o{ LEADERBOARD : "competes"

    GAMES {
        string game_id PK "Unique identifier"
        string title "Game title"
        text description "Game description"
        string author "Game creator"
        string version "Version number"
        string thumbnail "Thumbnail image path"
        string entry_point "Entry file path"
        string category "Game category"
        text tags "JSON array of tags"
        string created_at "Creation timestamp"
        string updated_at "Last update timestamp"
        text extra_data "JSON metadata"
    }

    USERS {
        string user_id PK "Unique identifier"
        string username UK "Unique username"
        string email UK "Unique email"
        string password_hash "Hashed password"
        string steem_username UK "Steem blockchain username"
        integer is_anonymous "Anonymous flag"
        float cur8_multiplier "Reward multiplier"
        float total_xp_earned "Total XP earned"
        text game_scores "JSON high scores per game"
        string avatar "Avatar image path"
        string created_at "Registration timestamp"
        string last_login "Last login timestamp"
        text extra_data "JSON additional data"
    }

    GAME_SESSIONS {
        string session_id PK "Unique identifier"
        string user_id FK "References USERS"
        string game_id FK "References GAMES"
        integer score "Session score"
        float xp_earned "XP earned in session"
        integer duration_seconds "Session duration"
        string started_at "Session start timestamp"
        string ended_at "Session end timestamp"
        text extra_data "JSON additional data"
    }

    USER_ACHIEVEMENTS {
        string achievement_id PK "Unique identifier"
        string user_id FK "References USERS"
        string game_id FK "References GAMES"
        string title "Achievement title"
        text description "Achievement description"
        string achieved_at "Achievement timestamp"
        text extra_data "JSON additional data"
    }

    LEADERBOARD {
        string entry_id PK "Unique identifier"
        string game_id FK "References GAMES"
        string user_id FK "References USERS"
        integer score "Best score"
        integer rank "Current rank position"
        string achieved_at "Score achievement timestamp"
        string updated_at "Last update timestamp"
    }
